--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <title>SEM Mercedes - Producción</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- El API Key se inyectará automáticamente desde el entorno en el SDK de JS si fuera necesario, 
-         pero para la visualización usaremos la carga dinámica en el componente -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script type="importmap">
     {
       "imports": {
         "react": "https://esm.sh/react@^19.2.3",
         "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
+        "react/": "https://esm.sh/react@^19.2.3/"
       }
     }
     </script>
     <style>
-      #map { height: 300px; width: 100%; border-radius: 1rem; margin-bottom: 1.5rem; }
-      .gm-style-iw { color: #1a202c !important; }
+      #map { height: 400px; width: 100%; border-radius: 1.5rem; z-index: 10; }
+      .animate-fade-in { animation: fadeIn 0.3s ease-out; }
+      @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+      .leaflet-container { font-family: inherit; border-radius: 1.5rem; }
     </style>
-</head>
+ head>
 <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
